<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>de.intranda.goobi.plugins.step</groupId>
  <artifactId>pdf-extraction</artifactId>
  <version>23.10.4</version>
  <packaging>jar</packaging>
  <name>pdf-extraction</name>
  <properties>
    <jar.name>plugin_intranda_step_pdf-extraction</jar.name>
    <dest.folder>/opt/digiverso/goobi/plugins/step/</dest.folder>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>11</maven.compiler.release>
    <goobi.version>23.10.1</goobi.version>
    <pdf-extraction-lib.version>2.6.1</pdf-extraction-lib.version>
  </properties>
  <distributionManagement>
    <repository>
      <id>intranda-releases</id>
      <url>https://nexus.intranda.com/repository/maven-releases</url>
    </repository>
  </distributionManagement>
  <repositories>
    <repository>
      <id>intranda-public</id>
      <url>https://nexus.intranda.com/repository/maven-public</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>de.intranda.goobi</groupId>
      <artifactId>pdf-extraction</artifactId>
      <version>${pdf-extraction-lib.version}</version>
      <exclusions>
      	<exclusion>
      		<groupId>org.apache.logging.log4j</groupId>
      		<artifactId>log4j-slf4j-impl</artifactId>
      	</exclusion>
      	<exclusion>
      		<groupId>org.apache.logging.log4j</groupId>
      		<artifactId>log4j-core</artifactId>
      	</exclusion>
      	<exclusion>
      		<groupId>de.intranda.ugh</groupId>
      		<artifactId>ugh-core</artifactId>
      	</exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>de.intranda.goobi.workflow</groupId>
      <artifactId>goobi-core-jar</artifactId>
      <version>${goobi.version}</version>
    </dependency>
  </dependencies>
  <build>
    <finalName>${jar.name}</finalName>
    <sourceDirectory>${project.basedir}/src/main/java</sourceDirectory>
    <testSourceDirectory>${project.basedir}/src/test/java</testSourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
          <exclude>rebel.xml</exclude>
        </excludes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12.4</version>
        <configuration>
          <skipTests>true</skipTests>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>buildnumber-maven-plugin</artifactId>
        <version>1.4</version>
        <executions>
          <execution>
            <phase>validate</phase>
            <goals>
              <goal>create</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <shortRevisionLength>10</shortRevisionLength>
          <doCheck>false</doCheck>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <archive>
            <manifestEntries>
              <Build-Time>${maven.build.timestamp}</Build-Time>
            </manifestEntries>
            <manifestSections>
              <manifestSection>
                <name>Versions</name>
                <manifestEntries>
                  <Implementation-Version>${project.version}</Implementation-Version>
                  <Implementation-SCM-Revision>${buildNumber}</Implementation-SCM-Revision>
                  <Implementation-SCM-Branch>${scmBranch}</Implementation-SCM-Branch>
                  <Goobi-Version>${goobi.version}</Goobi-Version>
                </manifestEntries>
              </manifestSection>
            </manifestSections>
          </archive>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <scm>
    <url>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-pdf-extraction.git</url>
    <connection>scm:git:ssh://git@gitea.intranda.com:goobi-workflow/goobi-plugin-step-pdf-extraction.git</connection>
  </scm>
</project>
